syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message boneData_proto
{
	bytes  translation	= 1;
	bytes  rotation		= 2;
	bytes  scale		= 3;
}